# ember-lang

./: .gitignore  CLAUDE.md  LICENSE  MANIFESTO.md  Makefile  OFI.md  README.md
benchmarks/: flex_bench.em  math_bench.em  math_bench2.em  parallel_bench.em  parbench.sh
docs/: CNAME  EMBER_FROM_THE_INSIDE.md  Gemfile  OFI.md  THE_EMBER_BOOK.md  _config.yml  architecture.md  claude-app-roadmap.md  faults.md  flare.md  for-llms.md  grammar.ebnf  http-design.md  index.html  index.md  install.sh  language.md  llms-full.txt  llms.txt  robots.txt  sitemap.xml  sqlite.md  start.md  what-is-ember.html
editors/zed/: .gitignore  Cargo.toml  README.md  extension.toml
editors/zed/grammars/: ember.wasm
editors/zed/languages/ember/: config.toml  highlights.scm
editors/zed/src/: lib.rs
examples/: 01_hello.em  02_types.em  03_errors.em  04_generics.em  05_concurrency.em  06_calculator.em  07_contracts.em  12_bits.em  13_interfaces.em  14_cli.em  15_wordcount.em  16_ffi.em
include/: arena.h  ast.h  builtin.h  bytecode_io.h  cextern.h  cgen_c.h  check.h  chunk.h  codegen.h  diag.h  docgen.h  driver.h  ember_rt.h  fault.h  graphics.h  json.h  lexer.h  lsp.h  module.h  mono.h  opcode.h  parser.h  program.h  prove.h  semindex.h  token.h  trace.h  typefmt.h  value.h  version.h  vm.h  vocab.def
kernel/: .gitignore  boot.S  ember_rt.h  faultdemo.em  hello.em  kernel.ld  platform.c  rt.c  timer.c  vectors.S
selfhost/: cgen_c.em  checker.em  codegen.em  parser.em  serialize.em  serialize_dump.em
src/: arena.c  ast_print.c  builtin.c  bytecode_io.c  cextern.c  cgen_c.c  check.c  (+21 more)
(+876 files in other folders)
